style.css
/*
Theme Name: Betterist
Theme URI: https://github.com/mpstenson/betterist
Author: Matt Stenson
Author URI: mattstenson.com
Description: This theme is designed to combine impactful photographry and well crafted typography to yeild a delightful reading experience.
Version: 1.0

*/

@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400|Josefin+Slab:400,600,700);
html
{
  font-size:16px;
}
/*grid stuff*/
.bet-grid
{

}
[class*='bet-col-'] {
  float: left;
  min-height: 1px;
}
.bet-col-1-1
{
  width: 100%;
}
.bet-col-1-10 {
  width:10%;
}
.bet-col-2-10 {
  width:20%;
}
.bet-col-3-10 {
  width:40%;
}
.bet-col-4-10 {
  width:40%;
}
.bet-col-5-10 {
  width:50%;
}
.bet-col-6-10 {
  width:60%;
}
.bet-col-7-10 {
  width:70%;
}
.bet-col-8-10 {
  width:80%;
}
.bet-col-9-10 {
  width:90%;
}
.bet-grid:after {
  content: "";
  display: table;
  clear: both;
}
@media (max-device-width:768px) {
  .bet-responsive-hide {
    display:none;
  }
  .bet-responsive-stretch{
    width:100%;
  }
  article{
    padding-left:30px;
    padding-right:30px;
    word-wrap: break-word;      /* IE */
  }
  html {
    font-size: 26px;
  }
  .header-container h2 {
      font-size:2em;
  }
  nav {
    display: none;
  }
}
.header-container{
    height: 100vh;
    background-size:cover;
    background-attachment: fixed;
}
.header-container h1 {
    padding-top:100px;
    text-align: center;
    text-transform:uppercase;
    font-family: 'Josefin Slab', serif;
    font-weight: 400;
    font-size: 4rem;
    color: #000;
}
.header-container h1 a {
    color: #000;
    text-decoration: none;
}
.header-container h1 a:hover {
    text-decoration: none;
    color: #000;
}
.header-container h2 {
    text-align: center;
    font-family: 'Lato', sans-serif;
    font-weight: 300;
}
.page-header{
  padding-top: 60px;
  padding-bottom: 60px;

}
/* Giving a background-color to the nav container. */
nav {
	margin: 0px 0;
  margin-top:10px;
	background-color: #fff;
  padding-top:5px;
  padding-bottom:5px;
}

/* Since we'll have the "ul li" "float:left"
 * we need to add a clear after the container. */

nav:after {
	content:"";
	display:table;
	clear:both;
}

/* Removing padding, margin and "list-style" from the "ul",
 * and adding "position:reltive" */
nav ul {
	padding:0;
	margin:0;
	list-style: none;
	position: relative;
	}

/* Positioning the navigation items inline */
nav ul li {
	margin: 0px;
	display:inline-block;
	float: left;
	background-color: #fff;
  border-right-style:solid;
  border-right-width: .2px;
  border-right-color: #000;
	}

nav ul li:last-of-type {
  border-right-style:none;

}

/* Styling the links */
nav a {
	display:block;
	padding:0 10px;
	color:#000;
	font-size:1rem;
	line-height: 20px;
	text-decoration:none;
}

/* Background color change on Hover */
nav a:hover {
	background-color: #fff;
  text-decoration: none;
  color:#000;
}

nav a:visited {
	background-color: #fff;
  text-decoration: none;
  color:#000;
}


/* Hide Dropdowns by Default
 * and giving it a position of absolute */
nav ul ul {
	display: none;
	position: absolute;
	/* has to be the same number as the "line-height" of "nav a" */
	top: 20px;
}

/* Display Dropdowns on Hover */
nav ul li:hover > ul {
	display:inherit;
}

/* First Tier Dropdown */
nav ul ul li {
	width:170px;
	float:none;
	display:list-item;
	position: relative;
  border-right-style:none;
}

/* Second, Third and more Tiers
 * We move the 2nd and 3rd etc tier dropdowns to the left
 * by the amount of the width of the first tier.
*/
nav ul ul ul li {
	position: relative;
	top:-20px;
	/* has to be the same number as the "width" of "nav ul ul li" */
	left:170px;
  padding-top:0px;
}


/* Change ' +' in order to change the Dropdown symbol */
li > a:after { content:  ' '; font-family: 'FontAwesome';font-weight: 100; font-size: 8px;}
nav ul ul li > a:after { content:  ' '; font-family: 'FontAwesome';font-weight: 100; font-size: 12px;}
li > a:only-child:after { content: ''; }

#content-container {
  margin-top:0px;
}
article {
 border-bottom-style: dashed;
border-bottom-width: 1px;
    border-bottom-color: #000;
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-size: 1rem;
   padding-top:30px;
   padding-bottom:30px;
   margin-bottom:50px;
   line-height: 1.4rem;
}
body{
  font-family: 'Lato', sans-serif;
  font-weight: 100;
}
#site-title h1 {
  font-family: 'Lato', sans-serif;
  font-weight: 600;
}
article > p:first-child:first-letter {
  float: left;
    color: #000;
    font-size: 79px;
    line-height: 44px;
    padding-top: 5px;
    padding-right: 0px;
    padding-left: 0px;
    font-family: 'Josefin Slab', serif;
    }
    @media (max-width:768px) {
      article {
         padding-left:10px;
      }
    }
article img {
  max-width:100%;
  height:auto;
}
blockquote {
  font-size: 1.5rem;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 50px;
  padding-left: 15px;
  border-left: 3px solid #ccc;
}

